# preferences

./: .bashrc  .clang-format-air  .clang-format-ks  .zshrc  README.md  fresh-install.sh  snippets.cpp
.screenlayout/: on-undock.sh  ubu-1-screen.sh
clang/: .clang-format  .clang-tidy  .clang-tidy-ks  run-clang-format.sh  run-clang-tidy.py  run-clang-tidy.sh
cmake/: CMakeLists.txt.oneleveldeep  CMakeLists.txt.toplevel  configuration.cmake  run_tests.py  tests.cmake
codecov/: .codecov.yml  .coveragerc
git/: notes.txt  pre-commit  pre-commit.2  pre-push  pre-push.2
i3/: config  fortem.screenlayout.sh
i3/.i3/: config
i3/.screenlayout/: on-dock.sh  srandrd.sh  ubu-2-screen.sh
ros/: package.conf  package.xml
shell/: .zshrc  zsh.sh
