<?xml version="1.0"?>
<package>
  <name>oneleveldeep</name>
  <version>0.0.1</version>
  <description>The one-level-deep package for some project's stuff</description>
  <maintainer email="software@awesome.com">Software Team</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>rostest</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>roslib</run_depend>

  <test_depend>rosunit</test_depend>

</package>
